# versoscale_worker

./: README.md  pyproject.toml
versoscale_worker/: ca-cert.pem  client-cert.pem  client-key.pem  client.py  exceptions.py  resilience.py  runner.py
versoscale_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
versoscale_worker/protos/: coordinator_pb2.py  coordinator_pb2_grpc.py  parameter_server_pb2.py  parameter_server_pb2_grpc.py  tenant_management_pb2.py  tenant_management_pb2_grpc.py
